--- a/src/app/realtime-face/realtime-face.component.html
+++ b/src/app/realtime-face/realtime-face.component.html
@@ -1,3 +1,8 @@
-<h2>Live Face Detection</h2>
+<!-- <h2 style="text-align: center;">UnFace Real-Time Detection Model Testing</h2>
 <video #videoElement autoplay playsinline></video>
-<canvas #canvasElement></canvas>
+<canvas #canvasElement></canvas> -->
+<h2 style="text-align: center;">UnFace Real-Time Detection Model Testing</h2>
+<div class="video-container">
+  <video #videoElement autoplay playsinline></video>
+  <canvas #canvasElement></canvas>
+</div>
