--- a/src/app/realtime-face/realtime-face.component.scss
+++ b/src/app/realtime-face/realtime-face.component.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  top: 10px;
+  // top: 10px;
   left: 0;
   width: 100vw;
   height: 100vh;
