--- a/src/app/realtime-face/realtime-face.component.html
+++ b/src/app/realtime-face/realtime-face.component.html
@@ -1,7 +1,7 @@
 <!-- <h2 style="text-align: center;">UnFace Real-Time Detection Model Testing</h2>
 <video #videoElement autoplay playsinline></video>
 <canvas #canvasElement></canvas> -->
-<h2 style="text-align: center;">UnFace Real-Time Detection Model Testing</h2>
+<h2 style="text-align: center;font-family: 'Inter',sans-serif!important;">UnFace Real-Time On-Device Detection Model Testing</h2>
 <div class="video-container">
   <video #videoElement autoplay playsinline></video>
   <canvas #canvasElement></canvas>
