--- a/src/app/camera-capture/camera-capture.component.scss
+++ b/src/app/camera-capture/camera-capture.component.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  font-family: "Inter",sans-serif!important;
   // margin-top: 50px; /* Adjust as needed */
 }
 
