--- a/src/app/face-extraction/face-extraction.component.scss
+++ b/src/app/face-extraction/face-extraction.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: "Inter",sans-serif!important;
   text-align: center;
   // margin-top: 50px; /* Adjust as needed */
 }
