--- a/src/app/face-verification/face-verification.component.scss
+++ b/src/app/face-verification/face-verification.component.scss
@@ -1,43 +1,51 @@
 .unbox {
   display: flex;
-  font-family: "Inter",sans-serif!important;
   flex-direction: column;
   align-items: center;
+  font-family: "Inter",sans-serif!important;
   text-align: center;
   // margin-top: 50px; /* Adjust as needed */
 }
+// video {
+//   width: 100%;
+// }
 
-/* Additional styles for the video and captured image elements */
-video, img {
+video {
   max-width: 100%;
   height: auto;
   margin-bottom: 10px;
 }
 
-/* Add these styles to your component's CSS */
 .image-container {
   position: relative;
   display: inline-block;
+  margin: 10px;
 }
 
-.boundary-box {
+.verified {
+  border: 2px solid green;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.face-box {
   position: absolute;
   border: 2px solid green;
   box-sizing: border-box;
   pointer-events: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
-.face-emoji {
-  width: 40px;
-  height: 40px;
-}
-
-.green-tick {
+.emoji {
+  position: absolute;
+  font-size: 36px;
   color: green;
-  font-size: 24px;
-  margin-top: 5px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
