--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,6 +26,28 @@
   transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
+.first {
+  background: linear-gradient(320deg, rgb(3, 77, 146), rgb(0, 60, 255));
+  position: relative;
+  // background: #ffffff;
+  // color: #000;
+  // padding: 15px;
+  margin: 10px;
+  border-radius: 10px;
+  width: auto;
+  padding: 0 17px;
+  height: 44px;
+  font-size: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  color: #ffffff;
+}
+
 .tooltip {
   position: absolute;
   top: 0;
