--- a/src/app/face-verification/face-verification.component.html
+++ b/src/app/face-verification/face-verification.component.html
@@ -1,11 +1,18 @@
 <div class="unbox">
   <h1>UnFace Verification Model Testing</h1>
+  <!-- <ng-container *ngIf="result && image2 && image1">
+    <div class="emoji" *ngIf="result?.verified; else crossEmoji">&#9989;</div>
+    <ng-template #crossEmoji>&#10060;</ng-template>
+  </ng-container> -->
   <div *ngIf="!bothImagesCaptured; else imagesCapturedContent">
     <div>
       <video #videoElement autoplay></video>
     </div>
     <div>
-      <button (click)="captureImage()" [disabled]="image2">Capture {{ image2 ? 'Again' : 'Image' }}</button>
+      <button (click)="captureImage()" [disabled]="image2">Capture {{ image1 ? 'Again' : '1st Image' }}</button>
+      <input placeholder="1st image" style="margin-left: 10px;" type="file" (change)="uploadImage(1, $event)">
+      <input placeholder="2nd image" type="file" (change)="uploadImage(2, $event)">
+      <button (click)="captureImage()" [disabled]="!image1">Capture {{ image2 ? 'Again' : '2nd Image' }}</button>
       <button style="margin-left: 10px;" (click)="resetImages()" [disabled]="!image1 && !image2">Capture Again</button>
     </div>
   </div>
