--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,8 @@
     </span>
   </div> -->
 
+  <img style="width: auto;height: 65px;" src="https://d8it4huxumps7.cloudfront.net/uploads/images/64dd236fcf3b8_face_detection.png" alt="image">
+
   <div class="first">
     <!-- <span class="tooltip">Analyses basic features!</span> -->
     <span>
@@ -22,7 +24,7 @@
       Face Analyser
     </span>
   </div>
-  <div (click)="navigate('extractor')" class="uiverse">
+  <div (click)="navigate('detector')" class="uiverse">
     <span class="tooltip">Detects faces in pic!</span>
     <span>
       Face Detection
