--- a/src/app/face-extraction/face-extraction.component.html
+++ b/src/app/face-extraction/face-extraction.component.html
@@ -24,7 +24,7 @@
   </div>
 </div> -->
 <div class="unbox">
-  <h1>UnFace Extraction Model Testing</h1>
+  <h1>UnFace Detector Model Testing</h1>
   <div>
     <video #videoElement autoplay></video>
     <!-- Display the captured image with a green boundary box and a face emoji -->
