--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,12 +18,12 @@
       UnFace [BETA]
     </span>
   </div>
-  <div (click)="navigate('analyser')" class="uiverse">
+  <!-- <div (click)="navigate('analyser')" class="uiverse">
     <span class="tooltip">Analyses basic features!</span>
     <span>
       Face Analyser
     </span>
-  </div>
+  </div> -->
   <div (click)="navigate('detector')" class="uiverse">
     <span class="tooltip">Detects faces in pic!</span>
     <span>
@@ -33,7 +33,7 @@
   <div (click)="navigate('verifier')" class="uiverse">
     <span class="tooltip">Verifies faces in pics!</span>
     <span>
-      Face Verifier
+      Face Verification
     </span>
   </div>
   <div (click)="navigate('realtime')" class="uiverse">
