--- a/src/app/face-verification/face-verification.component.html
+++ b/src/app/face-verification/face-verification.component.html
@@ -1,5 +1,6 @@
 <div class="unbox">
   <h1>UnFace Verification Model Testing</h1>
+  <h2>We are changing the model's params for improvements! It may not work currently.</h2>
   <!-- <ng-container *ngIf="result && image2 && image1">
     <div class="emoji" *ngIf="result?.verified; else crossEmoji">&#9989;</div>
     <ng-template #crossEmoji>&#10060;</ng-template>
