--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,13 +10,12 @@
     </span>
   </div> -->
 
-  <img style="width: auto;height: 65px;" src="https://d8it4huxumps7.cloudfront.net/uploads/images/64dd236fcf3b8_face_detection.png" alt="image">
-
-  <div class="first">
-    <!-- <span class="tooltip">Analyses basic features!</span> -->
-    <span>
-      UnFace [BETA]
-    </span>
+  <div style="display: flex;">
+    <img style="width: auto;height: 30px;padding: 17px 0 17px 15px;" src="https://d8it4huxumps7.cloudfront.net/uploads/images/unstop/svg/unstop-logo.svg" alt="image">
+    <button class="button">
+      <svg class="svg-icon"  xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
+      <span class="lable">DEV</span>
+    </button>
   </div>
   <!-- <div (click)="navigate('analyser')" class="uiverse">
     <span class="tooltip">Analyses basic features!</span>
@@ -40,6 +39,12 @@
     <span class="tooltip">On-device real-time detection!</span>
     <span>
       Real-Time Detection
+    </span>
+  </div>
+  <div (click)="navigate('ask')" class="uiverse">
+    <span class="tooltip">AI ChatBot!</span>
+    <span>
+      AskBot
     </span>
   </div>
 </div>
