--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
       Face Analyser
     </span>
   </div> -->
-  <div (click)="navigate('detector')" class="uiverse">
+  <!-- <div (click)="navigate('detector')" class="uiverse">
     <span class="tooltip">Detects faces in pic!</span>
     <span>
       Face Detection
@@ -40,7 +40,7 @@
     <span>
       Real-Time Detection
     </span>
-  </div>
+  </div> -->
   <div (click)="navigate('ask')" class="uiverse">
     <span class="tooltip">AI ChatBot!</span>
     <span>
