--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,5 +47,11 @@
       AskBot
     </span>
   </div>
+  <div (click)="navigate('qtc')" class="uiverse">
+    <span class="tooltip">Question-Topic Classifier!</span>
+    <span>
+      QTC Model
+    </span>
+  </div>
 </div>
 <router-outlet></router-outlet>
