--- a/src/app/qtc/qtc.component.html
+++ b/src/app/qtc/qtc.component.html
@@ -14,6 +14,14 @@
     <pre>{{ apiResponse | json }}</pre>
 
     <!-- Bar Chart -->
-
+    <div>
+      <canvas baseChart
+        [datasets]="barChartData"
+        [labels]="barChartLabels"
+        [options]="barChartOptions"
+        [legend]="barChartLegend"
+        [chartType]="barChartType">
+      </canvas>
+    </div>
   </div>
 </div>
