--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,16 +41,16 @@
       Real-Time Detection
     </span>
   </div> -->
-  <div (click)="navigate('ask')" class="uiverse">
+  <!-- <div (click)="navigate('ask')" class="uiverse">
     <span class="tooltip">AI ChatBot!</span>
     <span>
       AskBot
     </span>
-  </div>
-  <div (click)="navigate('qtc')" class="uiverse">
-    <span class="tooltip">Question-Topic Classifier!</span>
+  </div> -->
+  <div (click)="navigate('stc')" class="uiverse">
+    <span class="tooltip">Skill-Topic Classifier!</span>
     <span>
-      QTC Model
+      STC Model
     </span>
   </div>
 </div>
