--- a/src/app/qtc/qtc.component.html
+++ b/src/app/qtc/qtc.component.html
@@ -31,9 +31,13 @@
 <div *ngIf="isSidePanelOpen" class="side-panel">
   <!-- <button class="mb-20" (click)="toggleSidePanel()">Close</button> -->
   <img style="cursor: pointer;" (click)="toggleSidePanel()" src="https://d8it4huxumps7.cloudfront.net/files/652bc6f6ccbf0_icons8_close.svg" height="20" alt="close">
-  <h3>Supported Tags</h3>
-  <h4>Total: {{supportedTags.length+1}}</h4>
+  <h2>Supported Tags ({{(techSupportedTags.length+1) + (nontechSupportedTags.length+1)}})</h2>
+  <h3>Non-Technology ({{nontechSupportedTags.length+1}})</h3>
   <ul>
-    <li *ngFor="let tag of supportedTags">{{ tag }}</li>
+    <li *ngFor="let tag of nontechSupportedTags">{{ tag }}</li>
+  </ul>
+  <h3>Technology ({{techSupportedTags.length+1}})</h3>
+  <ul class="mb-50">
+    <li *ngFor="let tag of techSupportedTags">{{ tag }}</li>
   </ul>
 </div>
