--- a/src/app/qtc/qtc.component.html
+++ b/src/app/qtc/qtc.component.html
@@ -11,8 +11,12 @@
 <div *ngIf="!isLoading" class="container">
   <!-- <input type="text" [(ngModel)]="inputText" placeholder="Enter text here..."> -->
   <button class="button" (click)="predictTags(inputText)">Predict Tags</button>
-  <div class="mt-20" *ngIf="!isLoading && labels.length > 0">
-    <div class="chip" *ngFor="let label of labels" [style.background-color]="getRandomColor()">{{ label[0] }} ({{ label[1] | number:'1.2-2' }})</div>
+  <div class="mt-20" *ngIf="!isLoading && labels.length > 0 && answered">
+    <div class="chip" *ngFor="let label of labels" [style.background-color]="getRandomColor()"> {{ label[0] }} ({{ label[1] | number:'1.2-2' }})</div>
+    <span>Time Taken: {{time_taken | number:'1.2-2'}} ms</span>
+  </div>
+  <div class="mt-20" *ngIf="!isLoading && labels.length == 0 && answered">
+    <div class="chip" [style.background-color]="getRandomColor()">No label Predicted!</div>
     <span>Time Taken: {{time_taken | number:'1.2-2'}} ms</span>
   </div>
 </div>
