--- a/src/app/qtc/qtc.component.html
+++ b/src/app/qtc/qtc.component.html
@@ -8,8 +8,7 @@
   </svg>
 <input [(ngModel)]="inputText" (keyup.enter)="predictTags(inputText)" class="input" type="text" placeholder="Enter the question here!">
 </div>
-<div *ngIf="!isLoading" class="container">
-  <!-- <input type="text" [(ngModel)]="inputText" placeholder="Enter text here..."> -->
+<!-- <div *ngIf="!isLoading" class="container">
   <button class="button" (click)="predictTags(inputText)">Predict Tags</button>
   <div class="mt-20" *ngIf="!isLoading && labels.length > 0 && answered">
     <div class="chip" *ngFor="let label of labels" [style.background-color]="getRandomColor()"> {{ label[0] }} ({{ label[1] | number:'1.2-2' }})</div>
@@ -18,6 +17,35 @@
   <div class="mt-20" *ngIf="!isLoading && labels.length == 0 && answered">
     <div class="chip" [style.background-color]="getRandomColor()">No label Predicted!</div>
     <span>Time Taken: {{time_taken | number:'1.2-2'}} ms</span>
+  </div>
+</div> -->
+<div *ngIf="!isLoading" class="container">
+  <button class="button" (click)="predictTags(inputText)">Predict Tags</button>
+  <div *ngIf="!isLoading && answered">
+    <div *ngIf="skills.length > 0">
+      <h3>Skills</h3>
+      <div class="chip" *ngFor="let skill of skills" [style.background-color]="getRandomColor()">
+        {{ skill }}
+      </div>
+    </div>
+    <div *ngIf="topics.length > 0">
+      <h3>Topics</h3>
+      <div class="chip" *ngFor="let topic of topics" [style.background-color]="getRandomColor()">
+        {{ topic }}
+      </div>
+    </div>
+    <div *ngIf="industry.length > 0">
+      <h3>Industry</h3>
+      <div class="chip" *ngFor="let ind of industry" [style.background-color]="getRandomColor()">
+        {{ ind }}
+      </div>
+    </div>
+    <div *ngIf="difficultyLevel">
+      <h3>Difficulty Level</h3>
+      <div class="chip" [style.background-color]="getRandomColor()">
+        {{ difficultyLevel }}
+      </div>
+    </div>
   </div>
 </div>
 <div *ngIf="isLoading">
