--- a/src/app/qtc/qtc.component.scss
+++ b/src/app/qtc/qtc.component.scss
@@ -8,6 +8,13 @@ h1 {
   color: #1c4980;
 }
 
+h3 {
+  // text-align: center;
+  font-family: "Inter",sans-serif!important;
+  color: #1c4980;
+  margin-bottom: 2px;
+}
+
 .group {
   display: flex;
   line-height: 30px;
